--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         voluptatum dolores distinctio fugiat?
       </p>
       <p class="links">
-        <a href="#">Contact Me</a>
-        <a href="#">Learn more about me</a>
+        <a class="button" href="#">Contact Me</a>
+        <a class="button" href="#">Learn more about me</a>
       </p>
+      <!--  <p class="button"><a href="#">Contact Me</a></p>
+      <p class="button"><a href="#">Learn more about me</a></p> 
+      This was just to illustrate why to always set the button class on the links directly. -->
     </div>
   </body>
 </html>
